--- a/style.css
+++ b/style.css
@@ -16,19 +16,18 @@
 		}
 	
 		body {
-			font-family: Monaco, Consolas, Courier, monospace;
+			font-family: Helvetica, Verdana, sans-serif;
 			font-size: 1em;
 			line-height: 1.8em;
-			color: #8DA1BD;
-			background: #141721;
-			padding: 60px;
-			width: 45em;
+			color: #378EC5;
+			width: 750px;
+			margin: 60px auto;
+			position: relative;
 			}
 		
-			a { color: #AEF23C; text-decoration: none; }
+			a { color: #B71F98; text-decoration: none; }
 		
 				a:hover { color: #FBD329; }
-				
 				
 			
 
@@ -38,29 +37,59 @@
 	++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
 	
 	#header {
-		margin: 0 0 7em 0;
+		width: 200px;
+		float: left;
+		text-align: right;
+		background: #288EC4 url("clouds-top.gif") no-repeat top left;
+		color: #fff;
+		line-height: 1.5em;
+		position: relative;
 		}
-	
-		#header h1 a {
-			color: #FF84C7;
+		
+		#header-footer {
+			width: 200px;
+			height: 14px;
+			background: url("clouds-bottom.gif");
 			}
 			
-			#header h1 a:hover { color: #FBD329; }
-		
-			#description {
-				color: #D34C75;
-				margin: 0 0 7em 0;
+		h1 {
+			font-size: 20px;
+			font-weight: bold;
+			margin: 55px 10px 20px 10px;
+			}
+			
+			h1 a { color: #fff; }
+			
+				h1 a:hover { color: #ddd; }
+				
+		#description {
+			margin: 0 10px 20px 10px;
+			font-size: 12px;
+			color: #CDE6F3;
+			}
+			
+		#header ul {
+			margin: 0 10px 10px 10px;
+			font-weight: bold;
+			font-size: 14px;
+			line-height: 1.8em;
+			}
+			
+			#header ul li a { color: #CDE6F3; }
+				
+				#header ul li a:hover { color: #fff; }
+				
+		#header form {
+			position: absolute;
+			bottom: -50px;
+			right: 20px;
+			}
+			
+			#header form input {
+				width: 140px;
 				}
-				
-				#description a {
-					color: #822B46;
-					}
-					
-					#description a:hover {
-						color: #fff;
-						}
-				
-		
+
+
 		
 		
 		
@@ -68,36 +97,109 @@
 		CONTENT
 	++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */		
 		
-	.post {
-		margin: 0 0 7em 0;
+	#content {
+		width: 522px;
+		float: right;
+		color: #00465B;
+		padding: 20px 0 50px 0;
 		}
 		
-		.permalink {
-			margin: 1.5em 0 0 0;
+		.date {
+			margin: 0 0 30px 0;
+			}
+		
+			.date a {
+				font-weight: bold;
+				font-size: 12px;
+				color: #A5DDF9;
+				background: url("cloud.gif") no-repeat 0 center;
+				padding: 0 0 0 26px;
+				}
+			
+				.date a:hover {
+					background: #fff;
+					}
+
+		
+		
+		
+/* 	++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+		POSTS
+	++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
+	
+	.post {
+		background: #C2EEFF;
+		border: 1px solid #C2EEFF;
+		width: 500px;
+		padding: 10px 10px -5px 10px;
+		margin: 0 0 30px 0;
+		-moz-border-radius: 10px;
+		-webkit-border-radius: 10px;
+		position: relative;
+		}
+		
+		.post a {
+			color: #288EC4;
+			background: #EFF9FF;
+			border-right: 1px solid #5EBEF2;
+			border-bottom: 1px solid #5EBEF2;
+			padding: 2px 4px;
+			position: relative;
 			}
 			
-			.permalink a {
-				background: #292D49;
-				padding: 2px 5px;
-				color: #597C1D;
-				}		
+			.post a:hover {
+				top: -1px;
+				left: -1px;
+				border-right: 1px solid #288EC4;
+				border-bottom: 1px solid #288EC4;
+				}
 				
-				.permalink a:hover {
-					color: #FBD329;
-					}
-				
+		.post h2 {
+			font-size: 20px;
+			font-weight: bold;
+			margin: 0 0 15px 0;
+			}
+			
+		.post p {
+			margin: 0 0 15px 0;
+			}
 		
+		.permalink {
+			position: absolute;
+			right: -30px;
+			top: 5px;
+			font-size: 16px;
+			}
+			
+			.post .permalink a {
+				color: #C2EEFF;
+				background: none;
+				border: none;
+				}
+				
+				.post .permalink a:hover {
+					top: 0;
+					left: 0;
+					color: #288EC4;
+					}
+		
+
 		
 
 
 /* 	++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 		QUOTE
-	++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */		
-		
-	.quote p, .photo p, .video p, .audio p, #content .conversation, .text blockquote, #footer {
-		color: #304156;
-		}
+	++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
 			
+	.quote h2 {
+		font-family: Georgia, Times, serif;
+		font-size: 20px;
+		font-style: italic;
+		font-weight: normal;
+		margin: 0 0 15px 0;
+		}		
+		
+
 		
 		
 		
@@ -105,13 +207,8 @@
 		PHOTO
 	++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
 	
-	.photo img, .photo a img, .video object {
-		border: 1px solid #8DA1BD;
-		}
+	.photo img { margin: 0 0 15px 0; }
 		
-		.photo a:hover img {
-			border: 1px solid #FFF;
-			}
 		
 		
 		
@@ -120,17 +217,24 @@
 		CONVERSATION
 	++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
 	
-	#content .conversation {
+	.conversation ul {
+		margin: 0 0 10px 0;
 		line-height: 2em;
 		}
-	
-		.member1 {
-			color: #8DA1BD;
+		
+		.conversation ul li {
+			padding: 0 5px;
 			}
-	
-			.label { color: #999; }
 			
-			.member1 .label { color: #FFF; }
+			.conversation ul li .label { font-weight: bold; }
+			
+			.conversation ul li.member1 {
+				background: #A1DCFF;
+				border: 1px solid #A1DCFF;
+				-moz-border-radius: 5px;
+				-webkit-border-radius: 5px;
+				}
+			
 	
 	
 	
@@ -139,35 +243,36 @@
 		TEXT
 	++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
 	
-	.text h2, .conversation h2 {
-		color: #fff;
-		margin: 0 0 1.5em 0;
+	.text ul, .text ol {
+		margin: 0 0 20px 30px;
 		}
 		
-	.text p, .audio p {
-		margin: 0 0 1.5em 0;
-		}
-		
-	.text blockquote {
-		margin: 0 0 1.5em 1.5em;
-		padding: 0 0 0 1.5em;
-		border-left: 1px solid #304156;
-		}
+		.text ul {
+			list-style: disc;
+			}
+			
+		.text ol {
+			list-style: decimal;
+			}
+			
+		.text blockquote {
+			font-style: italic;
+			margin: 0 0 15px 15px;
+			padding: 0 0 0 15px;
+			border-left: 1px solid #7EAFCD;
+			}
 	
-	ul {
-		list-style-type: square;
-		margin: 0 0 1.5em 2.5em;
-		}
-		
-	ol {
-		list-style-type: decimal;
-		margin: 0 0 1.5em 2.5em;
-		}
-		
-	strong { color: white; }
 	
-	em { color: white; font-style: italic; }
 	
+	
+	
+/* 	++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+		LINK
+	++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
+	
+	.link h2 {
+		margin: 5px 0 15px 0;
+		}
 	
 		
 		
@@ -177,10 +282,7 @@
 		NAVIGATION
 	++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
 	
-	#navigation {
-		height: 1.5em;
-		margin: 0 0 7em 0;
-		}
+
 		
 		
 		
@@ -188,19 +290,16 @@
 /* 	++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 		FOOTER
 	++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
-	
+
 	#footer {
-		margin: 0 0 7em 0;
+		clear: both;
+		padding: 30px 0;
+		color: #999;
 		}
 		
-		#searchform {
-			margin: 0 0 2em 0;
-			}
-			
-		#footer a { color: #597C1D; }
-	
-			#footer a:hover { color: #FBD329; }
-	
+		#footer a { color: #288EC4; }
+		
+			#footer a:hover { color: #CC48CE; }
 	
 	
 	
